[package]
name = "lsp-translations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.14.1"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }
serde = "1.0.130"
serde_json = "1.0.67"
regex = "1.5.4"
itertools = "0.10.1"
merge = "0.1.0"
derive-new = "0.5"
glob = "0.3.0"

[dev-dependencies]
tower-test = "0.4.0"
