[package]
name = "lsp-translations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.14.1"
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread", "io-util", "io-std"] }
serde = "1.0.130"
serde_json = "1.0.67"
serde_regex = "1.1.0"
regex = "1.5.4"
futures = "0.3.17"
merge = "0.1.0"
derive-new = "0.5"
glob = "0.3.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
country-emoji = "0.1.2"
# lsp-text-document = "0.2.0"

# [replace]
# "lsp-types:0.84.0" = { git = "https://github.com/gluon-lang/lsp-types.git" }

[dev-dependencies]
tower-test = "0.4.0"
ntest = "0.7.3"

